# gpt-fat-disk-image

./: Cargo.toml  README.md
cat/: Cargo.toml
cat/src/: main.rs
create/: Cargo.toml
list/: Cargo.toml
list/src/: main.rs
mini-fat/: Cargo.toml  README.md
mini-fat/src/: bpb.rs  directory.rs  lib.rs
mini-fat32/: Cargo.toml
mini-fat32/src/: bpb.rs  lib.rs
mini-gpt/: Cargo.toml  README.md
mini-gpt/src/: crc32.rs  gpt_header.rs  lib.rs  mbr.rs  partition_entry_array.rs
mini-hex-dump/: Cargo.toml
mini-hex-dump/src/: lib.rs
read/: Cargo.toml
read/src/: main.rs
tools/: Cargo.toml  README.md
tools/src/: create.rs  error.rs  info.rs  list.rs  read.rs
