[package]
name = "gpt-fat-disk-image-list"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
simon = "0.4"
mini_gpt = { version = "0.1", path = "../mini-gpt" }
mini_fat = { version = "0.1", path = "../mini-fat" }
mini_hex_dump = { version = "0.1", path = "../mini-hex-dump" }
