[package]
name = "mini_fat"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/gpt-fat-disk-image"
repository = "https://github.com/stevebob/gpt-fat-disk-image"
documentation = "https://docs.rs/mini_fat"
description = "Minimal FAT disk image decoder"

[dependencies]
anyhow = "1.0"

[features]
backtrace = []
