[package]
name = "gpt-fat-disk-image-tools"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/gpt-fat-disk-image"
repository = "https://github.com/stevebob/gpt-fat-disk-image"
description = "Tools for reading disk images with GPT partition tables and FAT filesystems"

[dependencies]
meap = "0.4"
mini_gpt = { version = "0.1", path = "../mini-gpt" }
mini_fat = { version = "0.1", path = "../mini-fat" }
anyhow = "1.0"
env_logger = "0.8"

[features]
backtrace = [ "mini_gpt/backtrace", "mini_fat/backtrace" ]

[[bin]]
name = "gpt-fat-disk-image-list"
path = "src/list.rs"

[[bin]]
name = "gpt-fat-disk-image-read"
path = "src/read.rs"

[[bin]]
name = "gpt-fat-disk-image-info"
path = "src/info.rs"

[[bin]]
name = "gpt-fat-disk-image-create"
path = "src/create.rs"
